# poc-python-architecture

./: README.md  pyproject.toml
source/: __init__.py
source/pago_co/adapters/api/: routes.py
source/pago_co/prospects/adapters/api/: routes.py
source/pago_co/prospects/domain/: hardcuts.py
source/shared/adapters/api/: server.py
source/shared/domain/hardcuts/models/: hardcuts.py
